05系統 試圖確保明細edit與delete能使用table.js預設方法

--- a/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm05/Index.cshtml
+++ b/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm05/Index.cshtml
@@ -82,11 +82,11 @@
             <!--OP Button-->
             <b-row class="mb-2">
                 <b-col>
-                    <b-button v-if="slot.data.operatePermissions.canCreate" v-b-modal.master-table-create-multi-modal class="mr-1" variant="detail3">多筆建立</b-button>
+                    @*<b-button v-if="slot.data.operatePermissions.canCreate" v-b-modal.master-table-create-multi-modal class="mr-1" variant="detail3">多筆建立</b-button>*@
                     <b-button v-if="slot.data.operatePermissions.canCreate" v-b-modal.master-table-create-modal class="mr-1" variant="detail3">建立</b-button>
-                    <b-button v-if="slot.data.operatePermissions.canUpdate" v-b-modal.master-table-edit-modal @@click="slot.data.isNewItemOnTop = false" :disabled="!slot.data.selectedMasterRow?.param" class="mr-1" variant="detail3">編輯</b-button>
-                    <b-button v-if="slot.data.operatePermissions.canDelete" v-b-modal.master-table-del-modal @@click="slot.data.isNewItemOnTop = false" :disabled="!slot.data.selectedMasterRow" class="mr-1" variant="detail3">刪除</b-button>
-                    <b-button v-if="slot.data.operatePermissions.canExport" class="mr-1" variant="detail3" v-on:click="slot.data.onDataExport" isWaitting="!isWaitting">匯出</b-button>
+                    @*<b-button v-if="slot.data.operatePermissions.canUpdate" v-b-modal.master-table-edit-modal @@click="slot.data.isNewItemOnTop = false" :disabled="!slot.data.selectedMasterRow?.param" class="mr-1" variant="detail3">編輯</b-button>*@
+                    @*<b-button v-if="slot.data.operatePermissions.canDelete" v-b-modal.master-table-del-modal @@click="slot.data.isNewItemOnTop = false" :disabled="!slot.data.selectedMasterRow" class="mr-1" variant="detail3">刪除</b-button>*@
+                    @*<b-button v-if="slot.data.operatePermissions.canExport" class="mr-1" variant="detail3" v-on:click="slot.data.onDataExport" isWaitting="!isWaitting">匯出</b-button>*@
                     <b-button v-if="slot.data.operatePermissions.canQuery" v-b-modal.master-table-query-modal class="mr-1" variant="detail3">進階查詢</b-button>
                     <!--Master OP Page-->
                     <fetched-page-modal url="CreateMulti" id="master-table-create-multi-modal" title="批次新增單檔資料" :classes="['max-width-90-pt']"></fetched-page-modal>
@@ -624,7 +624,22 @@
                 //#endregion
                 //#region 自定義:明細按鈕
                 getMasterTableActionButtonConfig,
-                getDetailTableActionButtonConfig
+                getDetailTableActionButtonConfig,
+                _editOneDetailOfMine(event, row) {
+                    if (!row) return;
+
+                    row.unselectRow();
+                    this.$nextTick(() => row.selectRow());
+
+                    this.isNewItemOnTop = false;
+
+                    if (!this.masterTableInst.multiDetails) {
+                        this.masterTableInst.$bvModal.show('detail-table-edit-modal');
+                        return;
+                    }
+
+                    this.$parent.editOneDetail(event, row);
+                }
                 //#endregion
             };
             //掛載Table
